test_suite/alan-2022-examples/passing/000161_pair.alan
source K8R begin if false < 6 then relax end end
