test_suite/alan-2022-examples/failing/003640_mutation.alan
source k6 begin if 3 then relax end - end
